tests/fixtures/invalid/dict_pos.py
# Cannot use unary + on dict
x: dict[int, int] = +{1: 2}
